Package_Tools/include-C/efl/fertig/ecore-evas-1/fertig/Ecore_Evas.h


extern Ecore_Evas *ecore_evas_new(const char *engine_name, int x, int y, int w, int h, const char *extra_options);
extern Ecore_Evas     *ecore_evas_wayland_shm_new(const char *disp_name, unsigned int parent, int x, int y, int w, int h, Eina_Bool frame);
extern Ecore_Evas     *ecore_evas_wayland_egl_new(const char *disp_name, unsigned int parent, int x, int y, int w, int h, Eina_Bool frame);
extern void            ecore_evas_wayland_type_set(Ecore_Evas *ee, int type);
extern Ecore_Wl_Window *ecore_evas_wayland_window_get(const Ecore_Evas *ee);
extern Ecore_Wl2_Window *ecore_evas_wayland2_window_get(const Ecore_Evas *ee);
extern Ecore_Cocoa_Window *ecore_evas_cocoa_window_get(const Ecore_Evas *ee);
extern Ecore_Evas     *ecore_evas_drm_new(const char *device, unsigned int parent, int x, int y, int w, int h);
extern Ecore_Evas     *ecore_evas_gl_drm_new(const char *device, unsigned int parent, int x, int y, int w, int h); 
extern Ecore_Evas     *ecore_evas_buffer_new(int w, int h);
extern Ecore_Evas     *ecore_evas_buffer_allocfunc_new(int w, int h, void *(*alloc_func) (void *data, int size), void (*free_func) (void *data, void *pix), const void *data);
extern const void     *ecore_evas_buffer_pixels_get(Ecore_Evas *ee);
extern Ecore_Evas *ecore_evas_buffer_ecore_evas_parent_get(Ecore_Evas *ee);
extern Ecore_Evas     *ecore_evas_ews_new(int x, int y, int w, int h);
extern Evas_Object *ecore_evas_ews_backing_store_get(const Ecore_Evas *ee);
extern void ecore_evas_ews_delete_request(Ecore_Evas *ee);
extern Evas_Object    *ecore_evas_object_image_new(Ecore_Evas *ee_target);
extern Ecore_Evas     *ecore_evas_object_ecore_evas_get(Evas_Object *obj);
extern Evas           *ecore_evas_object_evas_get(Evas_Object *obj);
extern Ecore_Evas *ecore_evas_cocoa_new(Ecore_Cocoa_Window *parent,
                                      int x,
                                      int y,
                                      int w,
                                      int h);
extern void        ecore_evas_callback_delete_request_set(Ecore_Evas *ee, Ecore_Evas_Event_Cb func);
extern void        ecore_evas_manual_render(Ecore_Evas *ee);
extern Eina_Bool ecore_evas_ews_setup(int x, int y, int w, int h);
extern Ecore_Evas *ecore_evas_ews_ecore_evas_get(void);
extern Evas *ecore_evas_ews_evas_get(void);
extern void        ecore_evas_ews_manager_set(const void *manager);